# dilemmas-api

./: .dockerignore  .env.example  .gitignore  API.md  CLAUDE.md  DEPLOYMENT.md  DIAGNOSIS.md  Dockerfile  EXPERIMENT_PLAN.md  HUMAN_TESTING_PLAN.md  README.md  TODO.md  alembic.ini  config.yaml  entrypoint.sh  fly.toml  pyproject.toml  pytest.ini  test-docker.sh
alembic/: env.py
data/: README.md
data/seeds/: README.md  actors.txt  (+5 more)
prompts/: README.md
research/: BEST_PRACTICES.md  EXPERIMENT_DESIGN_GUIDELINES.md  GUIDE.md  TEMPLATE_findings.md  config.json  index.md
scripts/: analyze_consistency.py  analyze_variables.py  check_claude_dilemmas.py  check_climate_dilemma.py  check_dilemmas.py  check_mismatch.py  check_missing_vars.py  check_recent_dilemmas.py  classify_existing_dilemmas.py  clean_orphaned_judgements.py  clear_db.py  compare_dilemmas.py  debug_action_result.py  debug_schema.py  delete_bench1.py  delete_experiment.py  drop_prod_choice_id_index.py  explore_db.py  export_experiment_data.py  fix_broken_dilemmas.py  fix_corrupted_choice_ids.py  fix_corrupted_choice_ids_complete.py  fix_corrupted_choice_ids_prod.py  fix_experiment_id_in_json.py  fix_tool_mapping.py  fix_uuid_collision.py  generate_batch.py  generate_batch_interactive.py  generate_bench1.py  generate_dilemma.py  generate_research_dilemmas.py  init_db.py  inspect_prod_db.py  label_collection.py  label_initial_experiments.py  prepare_for_publication.py  reset_prod_completely.py  reset_prod_judgements.py  retry_extraction.py  review_dilemmas.py  (+19 more)
tests/: test_config.py  test_dilemma.py
(+182 files in other folders)
