[project]
name = "dilemmas"
version = "0.1.0"
description = "Research project testing LLM ethical decision-making"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "pydantic-ai>=1.2.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.27",
    "aiosqlite>=0.21.0",
    "greenlet>=3.2.4",
    "rich>=14.2.0",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "alembic>=1.17.0",
    "pandas>=2.3.3",
    "markdown>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[dependency-groups]
dev = [
    "datasette>=0.65.1",
    "datasette-json-html>=1.0.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]
